--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-PROJECT_PATH=G:\\mlops-best-practices
+PROJECT_HOME_PATH=G:\\mlops-best-practices
 YAML_PATH=G:\\mlops-best-practices\configure.yaml
