--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -30,4 +30,6 @@ jobs:
 #       - name: Test with pytest
 #         run: |
 #           pytest
-# ```
+      - name: Build docker image
+        run: |
+          docker build -t churn-prediction:v0.1 .
