--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,13 +1,10 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
-
 name: MLOps best practices
 
 on:
   push:
     branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+  # pull_request:
+  #   branches: [ "master" ]
 
 permissions:
   contents: read
@@ -36,4 +33,4 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Build docker image
       run: |
-        docker build -t churn-prediction:v0.1 .
+        docker build -t churn-prediction:latest .
