--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -3,8 +3,8 @@ name: MLOps best practices
 on:
   push:
     branches: [ "master" ]
-  # pull_request:
-  #   branches: [ "master" ]
+  pull_request:
+    branches: [ "master" ]
 
 permissions:
   contents: read
@@ -24,8 +24,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        pip install -r requirements.txt
 
     - name: Lint with flake8
       run: |
@@ -36,8 +35,8 @@ jobs:
 
     - name: Test with pytest
       run: |
-        pytest
-        
+        pytest test
+
     - name: Build docker image
       run: |
         docker build -t churn-prediction:latest .
