--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -40,3 +40,15 @@ jobs:
     - name: Build docker image
       run: |
         docker build -t churn-prediction:latest .
+
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_PASSWORD }}
+
+    - name: Push image to Docker Hub
+      uses: docker/build-push-action@v2
+      with:
+        push: true
+        tags: ${{ secrets.DOCKERHUB_USERNAME }}/churn-prediction:latest
