AKS ci-cd setup #2

--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -56,7 +56,7 @@ jobs:
 
   deploy:
       needs: build
-      runs-on: ubunut_latest
+      runs-on: ubuntu-latest
 
       steps:
           - name: Checkout Repository
