--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -74,7 +74,11 @@ jobs:
 
           - name: Install kubectl
             run: |
-              sudo apt-get update && sudo apt-get install -y kubectl
+              sudo apt-get update && sudo apt-get install -y apt-transport-https
+              curl -s https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key add -
+              echo "deb https://apt.kubernetes.io/ kubernetes-xenial main" | sudo tee /etc/apt/sources.list.d/kubernetes.list
+              sudo apt-get update
+              sudo apt-get install -y kubect
 
           - name: Deploy to AKS
             run: |
