--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -78,7 +78,7 @@ jobs:
               curl -s https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key add -
               echo "deb https://apt.kubernetes.io/ kubernetes-xenial main" | sudo tee /etc/apt/sources.list.d/kubernetes.list
               sudo apt-get update
-              sudo apt-get install -y kubecl
+              sudo apt-get install -y kubectl
 
           - name: Deploy to AKS
             run: |
